--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,5 +3,6 @@ coroutines = "1.6.4"
 ktor = "2.2.4"
 
 [libraries]
-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
+coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
+coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
 ktor-utils = { module = "io.ktor:ktor-utils", version.ref = "ktor" }
