feat: replaceAll handle support
sample: android sample navigation using two stack types

--- a/samples/android-sample/src/main/AndroidManifest.xml
+++ b/samples/android-sample/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".MainApplication"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RoutingApplication"
@@ -23,6 +24,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activity.HomeActivity"
+            android:exported="false"
+            android:theme="@style/Theme.RoutingApplication" />
+        <activity
+            android:name=".activity.ComposableActivity"
+            android:exported="false"
+            android:theme="@style/Theme.RoutingApplication" />
     </application>
 
 </manifest>
