--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,9 @@
 [versions]
+compose-runtime = "1.3.1"
 coroutines = "1.6.4"
 ktor = "2.2.4"
 serialization = "1.4.1"
+voyager = "1.0.0-rc04"
 
 # SAMPLE VERSIONS #
 core-ktx = "1.9.0"
@@ -14,11 +16,14 @@ compose-bom = "2022.10.00"
 # SAMPLE VERSIONS #
 
 [libraries]
+compose-runtime = { module = "org.jetbrains.compose.runtime:runtime", version.ref = "compose-runtime" }
+compose-runtime-saveable = { module = "org.jetbrains.compose.runtime:runtime-saveable", version.ref = "compose-runtime" }
 coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
 ktor-http = { module = "io.ktor:ktor-http", version.ref = "ktor" }
 ktor-resources = { module = "io.ktor:ktor-resources", version.ref = "ktor" }
 serialization-core = { module = "org.jetbrains.kotlinx:kotlinx-serialization-core", version.ref = "serialization" }
+voyager-navigator = { module = "cafe.adriel.voyager:voyager-navigator", version.ref = "voyager" }
 
 # SAMPLE LIBRARIES #
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
