--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,52 @@
+org.gradle.jvmargs=-Xmx4096m -Dfile.encoding=UTF-8
+android.useAndroidX=true
+android.enableJetifier=true
 kotlin.code.style=official
 kotlin.js.compiler=ir
+
+kotlin.native.cacheKind=none
+kotlin.native.useEmbeddableCompilerJar=true
+# Enable kotlin/native experimental memory model
+kotlin.native.ignoreDisabledTargets=true
+kotlin.native.binary.memoryModel=experimental
+kotlin.mpp.stability.nowarn=true
+
+# Compose dependencies currently requires to be CompileOny if we want to both
+# support Android only projects and multiplatform projects.
+# based on the issue below, it seems to only have issues with compileOnly
+# when cache is enable, so, based on the currently state of Compose Multiplatform
+# the native target also does not work propertly with caching, so, any compose project
+# will require `kotlin.native.cacheKind=none` making possible to we continue using compileOnly.
+# https://youtrack.jetbrains.com/issue/KT-46377
+kotlin.native.ignoreIncorrectDependencies=true
+
+android.defaults.buildfeatures.buildconfig = false
+
+org.jetbrains.compose.experimental.macos.enabled=true
+org.jetbrains.compose.experimental.uikit.enabled=true
+org.jetbrains.compose.experimental.jscanvas.enabled=true
+
+kotlin.mpp.androidSourceSetLayoutVersion=2
+
+# Maven
+SONATYPE_HOST=S01
+SONATYPE_AUTOMATIC_RELEASE=true
+RELEASE_SIGNING_ENABLED=true
+
+GROUP=dev.programadorthi.routing
+
+POM_DESCRIPTION=A multiplatform decoupled routing system
+POM_INCEPTION_YEAR=2023
+POM_URL=https://github.com/programadorthi/kotlin-routing
+
+POM_LICENCE_NAME=Apache License Version 2.0
+POM_LICENCE_URL=https://www.apache.org/licenses/LICENSE-2.0
+POM_LICENCE_DIST=repo
+
+POM_SCM_URL=https://github.com/programadorthi/kotlin-routing
+POM_SCM_CONNECTION=scm:git:ssh://git@github.com/programadorthi/kotlin-routing.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/programadorthi/kotlin-routing.git
+
+POM_DEVELOPER_ID=programadorthi
+POM_DEVELOPER_NAME=Thiago Santos
+POM_DEVELOPER_URL=https://github.com/programadorthi
