refactor: resources module migration to multiplatform

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -60,6 +60,7 @@ material3 = { group = "androidx.compose.material3", name = "material3" }
 # SAMPLE LIBRARIES #
 
 [plugins]
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin"}
 ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "plugin-ktlint"}
 maven-publish = { id = "com.vanniktech.maven.publish", version.ref = "plugin-maven"}
 plugin-multiplatform-compose = { id = "org.jetbrains.compose", version.ref = "plugin-multiplatform-compose"}
