refactor: samples upgrade

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,8 @@
 org.gradle.jvmargs=-Xmx4096m -Dfile.encoding=UTF-8
 android.useAndroidX=true
-android.enableJetifier=true
+android.enableJetifier=false
+android.nonTransitiveRClass=true
+
 kotlin.code.style=official
 kotlin.js.compiler=ir
 
