publish: maven publication setup

--- a/gradle.properties
+++ b/gradle.properties
@@ -37,13 +37,14 @@ RELEASE_SIGNING_ENABLED=true
 
 GROUP=dev.programadorthi.routing
 
-POM_DESCRIPTION=A multiplatform decoupled routing system
+POM_NAME=Kotlin Routing
+POM_DESCRIPTION=An extensible and multiplatform routing system powered by Ktor
 POM_INCEPTION_YEAR=2023
 POM_URL=https://github.com/programadorthi/kotlin-routing
 
-POM_LICENCE_NAME=Apache License Version 2.0
-POM_LICENCE_URL=https://www.apache.org/licenses/LICENSE-2.0
-POM_LICENCE_DIST=repo
+POM_LICENSE_NAME=Apache License Version 2.0
+POM_LICENSE_URL=https://www.apache.org/licenses/LICENSE-2.0
+POM_LICENSE_DIST=https://www.apache.org/licenses/LICENSE-2.0
 
 POM_SCM_URL=https://github.com/programadorthi/kotlin-routing
 POM_SCM_CONNECTION=scm:git:ssh://git@github.com/programadorthi/kotlin-routing.git
@@ -51,4 +52,4 @@ POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/programadorthi/kotlin-routin
 
 POM_DEVELOPER_ID=programadorthi
 POM_DEVELOPER_NAME=Thiago Santos
-POM_DEVELOPER_URL=https://github.com/programadorthi
+POM_DEVELOPER_URL=https://programadorthi.dev
