--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ plugin-kover = "0.7.0-Alpha"
 plugin-ktlint = "11.0.0"
 plugin-maven = "0.25.2"
 
+atomicfu-version = "0.20.2"
 compose-compiler = "1.4.4"
 compose-runtime = "1.3.1"
 coroutines = "1.6.4"
@@ -28,6 +29,7 @@ plugin-android = { module = "com.android.tools.build:gradle", version.ref = "plu
 plugin-kotlin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 plugin-kover = { module = "org.jetbrains.kotlinx:kover-gradle-plugin", version.ref = "plugin-kover"}
 
+atomicfu = { module = "org.jetbrains.kotlinx:atomicfu", version.ref = "atomicfu-version" }
 compose-runtime = { module = "org.jetbrains.compose.runtime:runtime", version.ref = "compose-runtime" }
 compose-runtime-saveable = { module = "org.jetbrains.compose.runtime:runtime-saveable", version.ref = "compose-runtime" }
 coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
@@ -62,6 +64,7 @@ material3 = { group = "androidx.compose.material3", name = "material3" }
 # SAMPLE LIBRARIES #
 
 [plugins]
+atomicfu = { id = "org.jetbrains.kotlin.plugin.atomicfu", version.ref = "kotlin"}
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin"}
 ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "plugin-ktlint"}
 maven-publish = { id = "com.vanniktech.maven.publish", version.ref = "plugin-maven"}
