--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,9 @@ plugin-kover = "0.7.0-Alpha"
 plugin-ktlint = "11.0.0"
 plugin-maven = "0.25.2"
 
+androidx-activity = "1.8.2"
+androidx-startup = "1.1.1"
+
 compose-compiler = "1.4.4"
 compose-runtime = "1.3.1"
 coroutines = "1.6.4"
@@ -27,6 +30,9 @@ compose-bom = "2022.10.00"
 plugin-android = { module = "com.android.tools.build:gradle", version.ref = "plugin-android" }
 plugin-kotlin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 plugin-kover = { module = "org.jetbrains.kotlinx:kover-gradle-plugin", version.ref = "plugin-kover"}
+
+androidx-activity = { module = "androidx.activity:activity", version.ref = "androidx-activity" }
+androidx-startup = { module = "androidx.startup:startup-runtime", version.ref = "androidx-startup" }
 
 compose-runtime = { module = "org.jetbrains.compose.runtime:runtime", version.ref = "compose-runtime" }
 compose-runtime-saveable = { module = "org.jetbrains.compose.runtime:runtime-saveable", version.ref = "compose-runtime" }
