--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,8 +7,8 @@ plugin-maven = "0.25.2"
 androidx-activity = "1.8.2"
 androidx-startup = "1.1.1"
 
-compose-compiler = "1.4.4"
-compose-runtime = "1.3.1"
+compose = "1.5.0"
+
 coroutines = "1.6.4"
 kotlin = "1.8.10"
 ktor = "2.2.4"
@@ -34,8 +34,7 @@ plugin-kover = { module = "org.jetbrains.kotlinx:kover-gradle-plugin", version.r
 androidx-activity = { module = "androidx.activity:activity", version.ref = "androidx-activity" }
 androidx-startup = { module = "androidx.startup:startup-runtime", version.ref = "androidx-startup" }
 
-compose-runtime = { module = "org.jetbrains.compose.runtime:runtime", version.ref = "compose-runtime" }
-compose-runtime-saveable = { module = "org.jetbrains.compose.runtime:runtime-saveable", version.ref = "compose-runtime" }
+compose-runtime = { module = "org.jetbrains.compose.runtime:runtime", version.ref = "compose" }
 coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 ktor-events = { module = "io.ktor:ktor-events", version.ref = "ktor" }
 ktor-http = { module = "io.ktor:ktor-http", version.ref = "ktor" }
@@ -68,6 +67,7 @@ material3 = { group = "androidx.compose.material3", name = "material3" }
 # SAMPLE LIBRARIES #
 
 [plugins]
+jetbrains-compose = { id = "org.jetbrains.compose", version.ref = "compose" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin"}
 ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "plugin-ktlint"}
 maven-publish = { id = "com.vanniktech.maven.publish", version.ref = "plugin-maven"}
