--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,7 @@ kotlin.native.useEmbeddableCompilerJar=true
 # Enable kotlin/native experimental memory model
 kotlin.native.ignoreDisabledTargets=true
 kotlin.native.binary.memoryModel=experimental
+kotlin.mpp.applyDefaultHierarchyTemplate=false
 kotlin.mpp.stability.nowarn=true
 
 # Compose dependencies currently requires to be CompileOny if we want to both
