chore: serialization 1.6.2, coroutines 1.8.0-RC2, vanniktech maven 0.27.0

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,17 +2,17 @@
 plugin-android = "7.4.1"
 plugin-kover = "0.7.0-Alpha"
 plugin-ktlint = "11.0.0"
-plugin-maven = "0.25.2"
+plugin-maven = "0.27.0"
 
 androidx-activity = "1.8.2"
 androidx-startup = "1.1.1"
 
 compose = "1.5.11"
 
-coroutines = "1.6.4"
+coroutines = "1.8.0-RC2"
 kotlin = "1.9.21"
 ktor = "2.2.4"
-serialization = "1.4.1"
+serialization = "1.6.2"
 slf4j = "2.0.4"
 voyager = "1.0.0"
 
