--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 plugin-android = "8.2.1"
-plugin-kover = "0.7.0-Alpha"
+plugin-kover = "0.7.5"
 plugin-ktlint = "12.1.0"
 plugin-maven = "0.27.0"
 
