--- a/.github/ci-gradle.properties
+++ b/.github/ci-gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.daemon=false
 
 org.gradle.parallel=true
-org.gradle.jvmargs=-Xmx4608m -XX:MaxMetaspaceSize=1536m -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.jvmargs=-Xmx6g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseParallelGC -XX:MaxMetaspaceSize=1536m
 #org.gradle.workers.max=2
 
 kotlin.compiler.execution.strategy=in-process
