--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,14 +7,14 @@ plugin-maven = "0.27.0"
 androidx-activity = "1.8.2"
 androidx-startup = "1.1.1"
 
-compose = "1.5.11"
+compose = "1.6.0"
 
 coroutines = "1.8.0-RC2"
 kotlin = "1.9.21"
 ktor = "3.0.0-beta-1"
 serialization = "1.6.2"
 slf4j = "2.0.4"
-voyager = "1.0.0"
+voyager = "1.1.0-alpha03"
 
 junit = "4.13.2"
 robolectric = "4.11.1"
