Back to Legacy OSSRH

--- a/gradle.properties
+++ b/gradle.properties
@@ -33,7 +33,7 @@ org.jetbrains.compose.experimental.jscanvas.enabled=true
 kotlin.mpp.androidSourceSetLayoutVersion=2
 
 # Maven
-SONATYPE_HOST=CENTRAL_PORTAL
+SONATYPE_HOST=S01
 SONATYPE_AUTOMATIC_RELEASE=true
 RELEASE_SIGNING_ENABLED=true
 
