feat: koin di support
Get instances from Koin DI inside routes

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ serialization = "1.6.2"
 slf4j = "2.0.4"
 voyager = "1.1.0-alpha03"
 kodein = "7.21.2"
+koin = "3.5.3"
 
 junit = "4.13.2"
 robolectric = "4.11.1"
@@ -48,6 +49,7 @@ slf4j-api = { module = "org.slf4j:slf4j-api", version.ref = "slf4j" }
 slf4j-simple = { module = "org.slf4j:slf4j-simple", version.ref = "slf4j" }
 voyager-navigator = { module = "cafe.adriel.voyager:voyager-navigator", version.ref = "voyager" }
 kodein-di = { module = "org.kodein.di:kodein-di", version.ref = "kodein" }
+koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
 
 test-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
 test-coroutines-debug = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-debug", version.ref = "coroutines" }
