--- a/gradle.properties
+++ b/gradle.properties
@@ -1,36 +1,41 @@
+# sytleguide
+kotlin.code.style=official
+
+# gradle
+org.gradle.daemon=true
+org.gradle.caching=true
+org.gradle.vfs.watch=true
 org.gradle.jvmargs=-Xmx6g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseParallelGC
-android.useAndroidX=true
-android.enableJetifier=false
-android.nonTransitiveRClass=true
+
+# kotlin
+kotlin.native.ignoreDisabledTargets=true
+kotlin.mpp.stability.nowarn=true
+kotlin.mpp.enableCInteropCommonization=true
+kotlin.incremental.js.ir=false
+kotlin.incremental.js.klib=false
+kotlin.incremental.multiplatform=false
+kotlin.native.ignoreIncorrectDependencies=true
+kotlin.native.binary.memoryModel=experimental
+kotlin.native.useEmbeddableCompilerJar=true
 
 kotlin.daemon.jvmargs=-Xmx6g -XX:+HeapDumpOnOutOfMemoryError
 kotlin.daemon.useFallbackStrategy=false
-kotlin.code.style=official
 kotlin.js.compiler=ir
 
-kotlin.native.useEmbeddableCompilerJar=true
-# Enable kotlin/native experimental memory model
-kotlin.native.ignoreDisabledTargets=true
-kotlin.native.binary.memoryModel=experimental
-kotlin.mpp.applyDefaultHierarchyTemplate=false
-kotlin.mpp.stability.nowarn=true
+# android
+android.useAndroidX=true
+android.enableJetifier=false
+android.nonTransitiveRClass=true
+android.defaults.buildfeatures.buildconfig=false
 
-# Compose dependencies currently requires to be CompileOny if we want to both
-# support Android only projects and multiplatform projects.
-# based on the issue below, it seems to only have issues with compileOnly
-# when cache is enable, so, based on the currently state of Compose Multiplatform
-# the native target also does not work propertly with caching, so, any compose project
-# will require `kotlin.native.cacheKind=none` making possible to we continue using compileOnly.
-# https://youtrack.jetbrains.com/issue/KT-46377
-kotlin.native.ignoreIncorrectDependencies=true
-
-android.defaults.buildfeatures.buildconfig = false
-
+# compose
 org.jetbrains.compose.experimental.macos.enabled=true
 org.jetbrains.compose.experimental.uikit.enabled=true
 org.jetbrains.compose.experimental.jscanvas.enabled=true
 
-kotlin.mpp.androidSourceSetLayoutVersion=2
+# dokka
+# workaround for resolving platform dependencies, see https://github.com/Kotlin/dokka/issues/3153
+org.jetbrains.dokka.classpath.useNativeDistributionAccessor=true
 
 # Maven
 SONATYPE_HOST=S01
