--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,7 @@ org.gradle.jvmargs=-Xmx6g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 
 
 # kotlin
 kotlin.native.ignoreDisabledTargets=true
+kotlin.mpp.applyDefaultHierarchyTemplate=false
 kotlin.mpp.stability.nowarn=true
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.incremental.js.ir=false
