--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,16 +7,16 @@ plugin-maven = "0.29.0"
 androidx-activity = "1.8.2"
 androidx-startup = "1.1.1"
 
-compose = "1.6.2"
+compose = "1.6.10"
 
 coroutines = "1.8.0"
-kotlin = "2.0.0"
+kotlin = "2.0.10"
 ktor = "3.0.0-beta-2"
 serialization = "1.6.1" # Do not upgrade, 1.6.2 breaks maven publishing!
 slf4j = "2.0.4"
 voyager = "1.1.0-alpha03"
-kodein = "7.21.2"
-koin = "3.6.0-wasm-alpha2"
+kodein = "7.22.0"
+koin = "4.0.0-RC1"
 tomlj = "1.1.1"
 
 junit = "4.13.2"
@@ -81,6 +81,7 @@ material3 = { group = "androidx.compose.material3", name = "material3" }
 # SAMPLE LIBRARIES #
 
 [plugins]
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 jetbrains-compose = { id = "org.jetbrains.compose", version.ref = "compose" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin"}
 maven-publish = { id = "com.vanniktech.maven.publish", version.ref = "plugin-maven"}
