chore: voyager upgrade

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,7 @@ kotlin = "2.0.10"
 ktor = "3.0.0-beta-2"
 serialization = "1.6.1" # Do not upgrade, 1.6.2 breaks maven publishing!
 slf4j = "2.0.4"
-voyager = "1.1.0-alpha03"
+voyager = "1.1.0-beta02"
 kodein = "7.22.0"
 koin = "4.0.0-RC1"
 tomlj = "1.1.1"
