--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Lint
         run: |
-          ./gradlew ktlintCheck --stacktrace
+          ./gradlew lintKotlin --stacktrace
 
       - name: Tests
         run: |
