--- a/ksp/core-annotations/gradle.properties
+++ b/ksp/core-annotations/gradle.properties
@@ -1,3 +1,3 @@
-POM_NAME=Ksp Processor
-POM_ARTIFACT_ID=ksp-processor
-POM_DESCRIPTION=The KSP routing processor
+POM_NAME=Ksp Core Annotations
+POM_ARTIFACT_ID=ksp-core-annotations
+POM_DESCRIPTION=Core annotations to generate basic behaviors
