--- a/ksp/core-processor/gradle.properties
+++ b/ksp/core-processor/gradle.properties
@@ -1,3 +1,3 @@
-POM_NAME=Ksp Processor
-POM_ARTIFACT_ID=ksp-processor
-POM_DESCRIPTION=The KSP routing processor
+POM_NAME=Ksp Core Processor
+POM_ARTIFACT_ID=ksp-core-processor
+POM_DESCRIPTION=Ksp core processor to generate basic behaviors
