--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -32,6 +32,7 @@ espresso-core = "3.5.1"
 lifecycle-runtime-ktx = "2.3.1"
 activity-compose = "1.5.1"
 compose-bom = "2022.10.00"
+routing = "2.0.0-alpha02"
 # SAMPLE VERSIONS #
 
 [libraries]
@@ -83,6 +84,10 @@ ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview
 ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 material3 = { group = "androidx.compose.material3", name = "material3" }
+routing-core = { module = "dev.programadorthi.routing:core", version.ref = "routing" }
+routing-compose = { module = "dev.programadorthi.routing:compose", version.ref = "routing" }
+routing-voyager = { module = "dev.programadorthi.routing:voyager", version.ref = "routing" }
+routing-annotations = { module = "dev.programadorthi.routing:ksp-core-annotations", version.ref = "routing" }
 # SAMPLE LIBRARIES #
 
 [plugins]
@@ -91,3 +96,4 @@ jetbrains-compose = { id = "org.jetbrains.compose", version.ref = "compose" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin"}
 maven-publish = { id = "com.vanniktech.maven.publish", version.ref = "plugin-maven"}
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp"}
+routing = { id = "dev.programadorthi.routing", version.ref = "routing"}
