Upgrade Ktor to 3.0.1

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,7 +12,7 @@ compose = "1.6.10"
 coroutines = "1.8.0"
 kotlin = "2.0.10"
 ksp = "2.0.10-1.0.24"
-ktor = "3.0.0-beta-2"
+ktor = "3.0.1"
 serialization = "1.6.1" # Do not upgrade, 1.6.2 breaks maven publishing!
 slf4j = "2.0.4"
 voyager = "1.1.0-beta02"
